--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,10 +10,18 @@
 @import "./componentsWS/svg-sec";
 @import "./componentsWS/team";
 .container{
-    max-width: 1200px;
+    max-width: auto;
     padding: 0 15px;
     margin: 0 auto;
 }
+    @media screen and (min-width:1200px){
+        .container{
+            width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
+        }
+    }
+
 h5{
     margin-block-start: 0;
     margin-block-end: 0 ;
