--- a/sass/componentsWS/_main-sec.scss
+++ b/sass/componentsWS/_main-sec.scss
@@ -171,10 +171,18 @@ padding-top: 23px;
     top: 20%;
     left: 36%;
     background-color:$third-color;
-    min-width: 528px;
-    min-height: 581px;
+    min-width: 450px;
+    min-height: 609px;
     transform: translate(-50% -50%);
     padding: 15px;
+}
+@media screen and (min-width:1200px){
+    .modal{
+        top: 20%;
+        left: 36%;
+        min-width: 528px;
+        min-height: 581px;
+    }
 }
 .no-scroll{
     overflow: visible;
