--- a/sass/componentsWS/_svg-sec.scss
+++ b/sass/componentsWS/_svg-sec.scss
@@ -15,9 +15,8 @@
 }
 .regulars-logo{
     flex-wrap: wrap;
-    margin: 0 auto;
     display: flex;
-    row-gap: -100px;
+    margin-bottom: 95px;
     gap: 30px;
 }
 @media screen and (min-width:1200px){
@@ -28,18 +27,30 @@
     }
 }
 .regulars-logo>li{
-    margin-top: 50px;
-    width: 170px;
+   width: calc((100% - 30px)/2);
     height: 92px;
     border: solid 1px #AFB1B8;
     border-radius: 5px;
-    margin-bottom: 95px;
-    padding: 15px 30px;
     transition-property: fill, border ;
     transition-duration: 300ms;
     transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
     transition-delay: 10ms;
 }
+@media screen and (min-width:768px){
+    .regulars-logo{
+        &li{
+            width: calc((100% - 60px)/3);
+        }
+    }
+}
+@media screen and (min-width:1200px){
+    .regulars-logo{
+        &li{
+            width: 170px;
+        }
+    }
+}
+
 .regulars-logo-item{
 fill: $icon-color;
 transition-property: fill, border ;
@@ -52,4 +63,8 @@ transition-delay: 10ms;
     .regulars-logo-item{
     fill: $hover-color;
 border: none;}
+}
+.reg-icon{
+    display: block;
+    margin: 20px auto;
 }
